<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_done" translatable="false">Done</string>
    <string name="pick_image_intent_chooser_title">Select source</string>

    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>

</resources>
